[package]
name = "fin_decimal"
description = "A high-performance decimal fixed-point arithmetic library for financial applications"
version = "0.2.3"
authors = ["Vadim Sukhomlinov <vadim.sukhomlinov@gmail.com>"]
edition = "2024"
license = "BSD-4-Clause"
readme = "README.md"
keywords = ["decimal","math","number", "fixed-point"]
categories = ["algorithms", "data-structures", "mathematics", "no-std"]
repository = "https://github.com/vsukhoml/fin_decimal"
documentation = "https://docs.rs/fin_decimal"

[profile.release]
opt-level=3
debug=2
panic="abort"
overflow-checks=true

[lib]
name = "fin_decimal"
path = "src/lib.rs"
bench = false

[[bench]]
name = "perf"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
ufmt = { version = "0.2.0", optional = true, default-features = false }

[features]
unstable = [] # To keep travis-cargo happy
noasm = []
asm = []
full-quickcheck = []
default = []
